feat(make-program): add make-program to replace scripts in examples.
Update mf6 version to 6.4.0 and gsflow to 2.2.1.
Refactored autotest filenames to be more descriptive.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,28 +16,29 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-#        os: [ ubuntu-latest, macos-latest, windows-latest ]
-        include:
-          - os: ubuntu-latest
-            os_script: ifortvars_linux.sh
-          - os: macos-latest
-            os_script: ifortvars_macos.sh
-          - os: windows-2019
-            os_script: ifortvars_windows.bat
+        os: [ ubuntu-latest, macos-latest, windows-latest ]
+#        include:
+#          - os: ubuntu-latest
+#            os_script: ifortvars_linux.sh
+#          - os: macos-latest
+#            os_script: ifortvars_macos.sh
+##          - os: windows-2019
+#          - os: windows-latest
+#            os_script: ifortvars_windows.bat
     defaults:
       run:
         shell: bash
-    env:
-      WINDOWS_HPCKIT_URL: https://registrationcenter-download.intel.com/akdlm/irc_nas/18976/w_HPCKit_p_2022.3.1.19755_offline.exe
-      LINUX_HPCKIT_URL: https://registrationcenter-download.intel.com/akdlm/irc_nas/18975/l_HPCKit_p_2022.3.1.16997_offline.sh
-      MACOS_HPCKIT_URL: https://registrationcenter-download.intel.com/akdlm/irc_nas/18977/m_HPCKit_p_2022.3.1.15344_offline.dmg
-      WINDOWS_FORTRAN_COMPONENTS: intel.oneapi.win.ifort-compiler
-      LINUX_FORTRAN_COMPONENTS_WEB: intel.oneapi.lin.ifort-compiler
-      MACOS_FORTRAN_COMPONENTS: intel.oneapi.mac.ifort-compiler
-      WINDOWS_CPP_COMPONENTS: intel.oneapi.win.cpp-compiler
-      LINUX_CPP_COMPONENTS_WEB: intel.oneapi.lin.dpcpp-cpp-compiler-pro
-      MACOS_CPP_COMPONENTS: intel.oneapi.mac.cpp-compiler
-      FC: ifort
+#    env:
+#      WINDOWS_HPCKIT_URL: https://registrationcenter-download.intel.com/akdlm/irc_nas/18976/w_HPCKit_p_2022.3.1.19755_offline.exe
+#      LINUX_HPCKIT_URL: https://registrationcenter-download.intel.com/akdlm/irc_nas/18975/l_HPCKit_p_2022.3.1.16997_offline.sh
+#      MACOS_HPCKIT_URL: https://registrationcenter-download.intel.com/akdlm/irc_nas/18977/m_HPCKit_p_2022.3.1.15344_offline.dmg
+#      WINDOWS_FORTRAN_COMPONENTS: intel.oneapi.win.ifort-compiler
+#      LINUX_FORTRAN_COMPONENTS_WEB: intel.oneapi.lin.ifort-compiler
+#      MACOS_FORTRAN_COMPONENTS: intel.oneapi.mac.ifort-compiler
+#      WINDOWS_CPP_COMPONENTS: intel.oneapi.win.cpp-compiler
+#      LINUX_CPP_COMPONENTS_WEB: intel.oneapi.lin.dpcpp-cpp-compiler-pro
+#      MACOS_CPP_COMPONENTS: intel.oneapi.mac.cpp-compiler
+#      FC: ifort
 
     steps:
       - name: Checkout repo
@@ -60,76 +61,83 @@ jobs:
         run: |
           .github/common/download-examples.sh
 
+      - name: setup-msbuild
+        if: runner.os == 'Windows'
+        uses: microsoft/setup-msbuild@v1.1.3
+
+      - name: Install Intel OneAPI C++ and Fortran compilers
+        uses: modflowpy/install-intelfortran-action@v1
+
 #      - name: Install Intel OneAPI C++ and Fortran compilers
 #        if: runner.os != 'Windows'
 #        uses: modflowpy/install-intelfortran-action@v1
 
-      - name: cache install intel compilers on linux
-        if: runner.os == 'Linux'
-        id: cache-install-linux
-        uses: actions/cache@v2
-        with:
-          path: |
-            /opt/intel/oneapi/compiler
-          key: install-${{ env.LINUX_HPCKIT_URL }}-${{ env.LINUX_CPP_COMPONENTS_WEB }}-${{ env.LINUX_FORTRAN_COMPONENTS_WEB }}-compiler-${{ hashFiles('**/.github/intel-scripts/cache_exclude_linux.sh') }}
-
-      - name: install intel compilers on linux
-        if: runner.os == 'Linux' && steps.cache-install-linux.outputs.cache-hit != 'true'
-        run: |
-          .github/intel-scripts/install_linux.sh $LINUX_HPCKIT_URL $LINUX_CPP_COMPONENTS_WEB:$LINUX_FORTRAN_COMPONENTS_WEB
-
-      - name: cache install intel compilers on macos
-        if: runner.os == 'macOS'
-        id: cache-install-macos
-        uses: actions/cache@v2
-        with:
-          path: /opt/intel/oneapi
-          key: install-${{ env.MACOS_HPCKIT_URL }}--${{ env.MACOS_CPP_COMPONENTS }}-${{ env.MACOS_FORTRAN_COMPONENTS }}
-
-      - name: install intel compilers on macos
-        if: runner.os == 'macOS' && steps.cache-install-macos.outputs.cache-hit != 'true'
-        run: |
-          .github/intel-scripts/install_macos.sh $MACOS_HPCKIT_URL $MACOS_CPP_COMPONENTS:$MACOS_FORTRAN_COMPONENTS
-
-      - name: cache install Intel OneAPI compilers on windows
-        if: runner.os == 'Windows'
-        id: cache-install-windows
-        uses: actions/cache@v2
-        with:
-          path: C:\Program Files (x86)\Intel\oneAPI\compiler
-          key: install-${{ env.WINDOWS_HPCKIT_URL }}-${{ env.WINDOWS_CPP_COMPONENTS }}-${{ env.WINDOWS_FORTRAN_COMPONENTS }}-compiler-${{ hashFiles('**/.github/intel-scripts/cache_exclude_windows.sh') }}
-
-      - name: install install Intel OneAPI compilers on windows
-        if: runner.os == 'Windows' && steps.cache-install-windows.outputs.cache-hit != 'true'
-        run: |
-          .github/intel-scripts/install_windows.bat $WINDOWS_HPCKIT_URL $WINDOWS_CPP_COMPONENTS:$WINDOWS_FORTRAN_COMPONENTS
-
-      - name: activate intel and test on linux and macOS
-        if: runner.os != 'Windows'
-        env:
-          CC: icc
-        run: |
-          .github/intel-scripts/${{ matrix.os_script }}
-
-#      - name: test on Linux and MacOS
-#        if: runner.os != 'Windows'
+#      - name: cache install intel compilers on linux
+#        if: runner.os == 'Linux'
+#        id: cache-install-linux
+#        uses: actions/cache@v2
+#        with:
+#          path: |
+#            /opt/intel/oneapi/compiler
+#          key: install-${{ env.LINUX_HPCKIT_URL }}-${{ env.LINUX_CPP_COMPONENTS_WEB }}-${{ env.LINUX_FORTRAN_COMPONENTS_WEB }}-compiler-${{ hashFiles('**/.github/intel-scripts/cache_exclude_linux.sh') }}
+#
+#      - name: install intel compilers on linux
+#        if: runner.os == 'Linux' && steps.cache-install-linux.outputs.cache-hit != 'true'
 #        run: |
-#          pytest -v -n=auto --dist=loadfile -m="base or regression" --durations=0 --cov=pymake --cov-report=xml autotest/
-
-      - name: activate intel and test on Windows
-        if: runner.os == 'Windows'
-        env:
-          CC: icl
-        shell: cmd
-        run: |
-          call ".github/intel-scripts/ifortvars_windows.bat"
-          pytest -v -n=auto --dist=loadfile -m="base or regression" --durations=0 --cov=pymake --cov-report=xml autotest/
-
-#      - name: test on Windows
+#          .github/intel-scripts/install_linux.sh $LINUX_HPCKIT_URL $LINUX_CPP_COMPONENTS_WEB:$LINUX_FORTRAN_COMPONENTS_WEB
+#
+#      - name: cache install intel compilers on macos
+#        if: runner.os == 'macOS'
+#        id: cache-install-macos
+#        uses: actions/cache@v2
+#        with:
+#          path: /opt/intel/oneapi
+#          key: install-${{ env.MACOS_HPCKIT_URL }}--${{ env.MACOS_CPP_COMPONENTS }}-${{ env.MACOS_FORTRAN_COMPONENTS }}
+#
+#      - name: install intel compilers on macos
+#        if: runner.os == 'macOS' && steps.cache-install-macos.outputs.cache-hit != 'true'
+#        run: |
+#          .github/intel-scripts/install_macos.sh $MACOS_HPCKIT_URL $MACOS_CPP_COMPONENTS:$MACOS_FORTRAN_COMPONENTS
+#
+#      - name: cache install Intel OneAPI compilers on windows
 #        if: runner.os == 'Windows'
+#        id: cache-install-windows
+#        uses: actions/cache@v2
+#        with:
+#          path: C:\Program Files (x86)\Intel\oneAPI\compiler
+#          key: install-${{ env.WINDOWS_HPCKIT_URL }}-${{ env.WINDOWS_CPP_COMPONENTS }}-${{ env.WINDOWS_FORTRAN_COMPONENTS }}-compiler-${{ hashFiles('**/.github/intel-scripts/cache_exclude_windows.sh') }}
+#
+#      - name: install install Intel OneAPI compilers on windows
+#        if: runner.os == 'Windows' && steps.cache-install-windows.outputs.cache-hit != 'true'
+#        run: |
+#          .github/intel-scripts/install_windows.bat $WINDOWS_HPCKIT_URL $WINDOWS_CPP_COMPONENTS:$WINDOWS_FORTRAN_COMPONENTS
+#
+#      - name: activate intel and test on linux and macOS
+#        if: runner.os != 'Windows'
+#        env:
+#          CC: icc
+#        run: |
+#          .github/intel-scripts/${{ matrix.os_script }}
+#
+#      - name: activate intel and test on Windows
+#        if: runner.os == 'Windows'
+#        env:
+#          CC: icl
 #        shell: cmd
 #        run: |
-#          pytest -v -m="base or regression" --durations=0 --cov=pymake --cov-report=xml autotest/
+#          call ".github/intel-scripts/ifortvars_windows.bat"
+#          pytest -v -n=auto --dist=loadfile -m="base or regression" --durations=0 --cov=pymake --cov-report=xml autotest/
+
+      - name: test on Linux and MacOS
+        if: runner.os != 'Windows'
+        run: |
+          pytest -v -n=auto --dist=loadfile -m="base or regression" --durations=0 --cov=pymake --cov-report=xml autotest/
+
+      - name: test on Windows
+        if: runner.os == 'Windows'
+        shell: cmd
+        run: |
+          pytest -v -m="base or regression" --durations=0 --cov=pymake --cov-report=xml autotest/
 
       - name: Print coverage report before upload
         run: |
@@ -140,12 +148,12 @@ jobs:
         with:
           file: ./coverage.xml
 
-      - name: exclude unused files from cache on windows
-        if: runner.os == 'Windows' && steps.cache-install-windows.outputs.cache-hit != 'true'
-        run: |
-          .github/intel-scripts/cache_exclude_windows.sh
-
-      - name: exclude unused files from cache on linux
-        if: runner.os == 'Linux' && steps.cache-install-linux.outputs.cache-hit != 'true'
-        run: |
-          .github/intel-scripts/cache_exclude_linux.sh
+#      - name: exclude unused files from cache on windows
+#        if: runner.os == 'Windows' && steps.cache-install-windows.outputs.cache-hit != 'true'
+#        run: |
+#          .github/intel-scripts/cache_exclude_windows.sh
+#
+#      - name: exclude unused files from cache on linux
+#        if: runner.os == 'Linux' && steps.cache-install-linux.outputs.cache-hit != 'true'
+#        run: |
+#          .github/intel-scripts/cache_exclude_linux.sh
