feat(make-program): add make-program to replace scripts in examples.
Update mf6 version to 6.4.0 and gsflow to 2.2.1.
Refactored autotest filenames to be more descriptive.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -137,7 +137,7 @@ jobs:
         if: runner.os == 'Windows'
         shell: cmd
         run: |
-          pytest -v -m="base or regression" --durations=0 --cov=pymake --cov-report=xml autotest/
+          pytest -v -n=auto --dist=loadfile -m="base or regression" --durations=0 --cov=pymake --cov-report=xml autotest/
 
       - name: Print coverage report before upload
         run: |
