--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = mfpymake
 version = attr: pymake.config.__version__
 description = pymake is a Python package to compile MODFLOW-based models.
-long_description = file: README.md, LICENSE.md
+long_description = file: README.md
 long_description_content_type = text/markdown
 author = Joseph D. Hughes
 author_email = modflow@usgs.gov
