--- a/setup.cfg
+++ b/setup.cfg
@@ -42,6 +42,12 @@ install_requires =
 [options.package_data]
 pymake = utils/usgsprograms.txt
 
+[options.entry_points]
+console_scripts =
+    mfpymake = pymake.cmds.mfpymakecli:main
+    make-program = pymake.cmds.build:main
+    make-code-json = pymake.cmds.createjson:main
+
 [flake8]
 exclude =
     .git
