--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,6 @@
 [pytest]
 markers =
     base: base tests
-    regression: base and regression tests
+    regression: regression tests
     requests: usgsprograms requests tests
+    schedule: tests to run if a scheduled job
