--- a/.github/workflows/pymake-gcc.yml
+++ b/.github/workflows/pymake-gcc.yml
@@ -29,10 +29,10 @@ jobs:
         if: runner.os == 'Linux'
         uses: ts-graphviz/setup-graphviz@v1
 
-      - name: Set up Python
+      - name: Setup Python
         uses: actions/setup-python@v4.3.0
         with:
-          6.4.10
+          python-version: "3.10"
 
       - name: Install python packages
         run: |
