--- a/.github/workflows/pymake-gcc.yml
+++ b/.github/workflows/pymake-gcc.yml
@@ -2,7 +2,7 @@ name: pymake gcc build
 
 on:
   schedule:
-    - cron: '0 3 * * 3' # run at 3 AM UTC every Wednesday
+    - cron: '0 7 * * *' # run at 7 AM UTC every day
   push:
     branches: [ master ]
   pull_request:
@@ -46,17 +46,19 @@ jobs:
           .github/common/download-examples.sh
 
       - name: Run pytest
+        working-directory: ./autotest
         run: |
-          pytest -v --dist=loadfile -n=auto -m="base or regression" --durations=0 --cov=pymake --cov-report=xml autotest/
+          pytest -v --dist=loadfile -n=auto -m="base or regression" --durations=0 --cov=pymake --cov-report=xml
 
       - name: Print coverage report before upload
+        working-directory: ./autotest
         run: |
           coverage report
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3.1.1
         with:
-          file: ./coverage.xml
+          file: ./autotest/coverage.xml
 
   pymakeCI-gcc-prev:
     name: pymake CI GCC 9 and 8
@@ -102,17 +104,19 @@ jobs:
           .github/common/download-examples.sh
 
       - name: Run pytest
+        working-directory: ./autotest
         run: |
-          pytest -v --dist=loadfile -n=auto -m="base" --durations=0 --cov=pymake --cov-report=xml autotest/
+          pytest -v --dist=loadfile -n=auto -m="base" --durations=0 --cov=pymake --cov-report=xml
 
       - name: Print coverage report before upload
+        working-directory: ./autotest
         run: |
           coverage report
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3.1.1
         with:
-          file: ./coverage.xml
+          file: ./autotest/coverage.xml
 
   pymakeCI-python-prev:
     name: pymake CI with previous python versions
