* install test requirements for CI from pyproject.toml

--- a/.github/workflows/pymake-requests.yml
+++ b/.github/workflows/pymake-requests.yml
@@ -28,7 +28,8 @@ jobs:
 
       - name: Install python packages
         run: |
-          .github/common/install-python.sh
+          pip install --upgrade pip
+          pip install ".[test]"
 
       - name: Run pytest
         working-directory: ./autotest
