--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,6 @@ test = [
     "coverage",
     "flaky",
     "filelock",
-    "modflow-devtools",
     "pytest",
     "pytest-benchmark",
     "pytest-cases",
@@ -59,6 +58,10 @@ test = [
     "pytest-dotenv",
     "pytest-virtualenv",
     "pytest-xdist",
+    "appdirs",
+    "matplotlib",
+    "modflow-devtools",
+    "flopy",
 ]
 [project.scripts]
 mfpymake = "pymake.cmds.mfpymakecli:main"
