--- a/.github/workflows/pymake-requests.yml
+++ b/.github/workflows/pymake-requests.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Install python packages
         run: |
-          pip install --upgrade pip
+          python -m pip install --upgrade pip
           pip install ".[test]"
 
       - name: Run pytest
