--- a/autotest/pytest.ini
+++ b/autotest/pytest.ini
@@ -1,6 +1,7 @@
 [pytest]
 markers =
     base: base tests
+    dependency: tests that depend on other tests (via pytest-dependency)
     regression: regression tests
     requests: usgsprograms requests tests
     schedule: tests to run if a scheduled job
