* fix for meson mixed-language projects * add mf6dev, zbud6dev, and libmf6dev * remove default double precision builds for mfusg, mf2005, mflgr, and mfnwt

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,9 @@ jobs:
 
       - name: Set CXX (temporary)
         if: runner.os == 'Windows'
-        run: echo "CXX=icl" >> $GITHUB_ENV
+        run: |
+          echo "CC=icl" >> $GITHUB_ENV
+          echo "CXX=icl" >> $GITHUB_ENV
 
       - name: Setup Graphviz
         if: runner.os == 'Linux'
