fix(meson): fix issues with meson builds (#137)
* add test that tests meson builds for all targets
* add test that tests makefile build except for targets with c++ and libmf6
* use `set_dir()` in modflow_devtools.misc
* remove `working_directory()` from conftest.py
* fix for meson mixed-language projects
* add mf6dev, zbud6dev, and libmf6dev
* remove default double precision builds for mfusg, mf2005, mflgr, and mfnwt
* limit meson and makefile builds to what currently works

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,8 @@ jobs:
 
       - name: Set CXX (temporary)
         if: runner.os == 'Windows'
-        run: echo "CXX=icl" >> $GITHUB_ENV
+        run: |
+          echo "CXX=icl" >> $GITHUB_ENV
 
       - name: Setup Graphviz
         if: runner.os == 'Linux'
