--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,27 +27,19 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Intel Fortran Classic
-        uses: awvwgk/setup-fortran@main
+        uses: awvwgk/setup-fortran@v1
         with:
           compiler: intel-classic
-          version: 2021.7.0
-      
-      - name: Set SETVARS_COMPLETED (temporary)
-        run: echo "SETVARS_COMPLETED=1" >> $GITHUB_ENV
-
-      - name: Set CXX (temporary)
-        if: runner.os == 'Windows'
-        run: |
-          echo "CXX=icl" >> $GITHUB_ENV
+          version: "2021.7"
 
       - name: Setup Graphviz
         if: runner.os == 'Linux'
         uses: ts-graphviz/setup-graphviz@v1
 
       - name: Set up Python
-        uses: actions/setup-python@v4.7.1
+        uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
+          python-version: "3.11"
 
       - name: Install python packages
         run: |
@@ -83,6 +75,6 @@ jobs:
           coverage report
 
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3.1.4
+        uses: codecov/codecov-action@v3
         with:
           file: ./autotest/coverage.xml
