--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Intel Fortran Classic
-        uses: awvwgk/setup-fortran@v1
+        uses: fortran-lang/setup-fortran@v1
         with:
           compiler: intel-classic
           version: "2021.7"
@@ -39,7 +39,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.11"
+          python-version: "3.12"
 
       - name: Install python packages
         run: |
