--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,6 @@ on:
   schedule:
     - cron: '0 7 * * *' # run at 7 AM UTC every day
   push:
-    branches: 
-      - master
   pull_request:
     branches:
       - master
@@ -27,7 +25,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Intel Fortran Classic
-        uses: awvwgk/setup-fortran@v1
+        uses: fortran-lang/setup-fortran@v1
         with:
           compiler: intel-classic
           version: "2021.7"
@@ -39,7 +37,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.11"
+          python-version: "3.12"
 
       - name: Install python packages
         run: |
