--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ classifiers = [
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
     "Topic :: Scientific/Engineering :: Hydrology",
 ]
 requires-python = ">=3.8"
@@ -57,7 +58,6 @@ test = [
     "pytest-cov",
     "pytest-dependency",
     "pytest-dotenv",
-    "pytest-virtualenv",
     "pytest-xdist",
     "appdirs",
     "matplotlib",
