--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,5 +74,7 @@ jobs:
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         with:
           file: ./autotest/coverage.xml
