--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,10 +4,14 @@ on:
   schedule:
     - cron: '0 7 * * *' # run at 7 AM UTC every day
   push:
+    paths-ignore:
+      - '**.md'
   pull_request:
     branches:
       - master
       - develop
+    paths-ignore:
+      - '**.md'
 jobs:
 
   pymakeCI-os-intel:
