readme: update readme and installation.md (#160)

--- a/.github/workflows/pymake-gcc.yml
+++ b/.github/workflows/pymake-gcc.yml
@@ -4,10 +4,16 @@ on:
   schedule:
     - cron: '0 7 * * *' # run at 7 AM UTC every day
   push:
+    paths-ignore:
+      - 'README.md'
+      - 'docs/*.md'
   pull_request:
     branches:
       - master
       - develop
+    paths-ignore:
+      - 'README.md'
+      - 'docs/*.md'
 jobs:
 
   pymakeCI-os-gcc:
