chore(dependencies): restrict yanked pytest version 8.1.0

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,7 +52,7 @@ test = [
     "coverage",
     "flaky",
     "filelock",
-    "pytest",
+    "pytest!=8.1.0",
     "pytest-benchmark",
     "pytest-cov",
     "pytest-dependency",
